
   * Cope with forbidden parts of the repository a bit better. (#261194)

   * Handle annotate after copies in Subversion. (#381523)

   * Support unicode characters in tag names. (#385813)

   * Support pulling older revisions that are direct ancestors of the current
     tip. (#386198)

   * "bzr svn-import --incremental" now handles resurrected branches correctly.
     (#383980)

bzr-svn 0.6.1                    2009-05-22

  BUG FIXES

   * Cope with credentials in shared connections sometimes being a direct 
     dictionary.

   * Fix cache inspection after push when using the TDB database.

   * Prevent NoSuchRevision exception when pulling into a local branch that 
     is ahead of the remote branch.

   * Avoid buggy LogWalker.find_latest_change(). (#378799)

   * Use xdg cache directory (~/.cache/bzr-svn usually) if the Python XDG
     module is available.

   * Handle hidden revisions properly during branch fetch.

bzr-svn 0.6.0                    2009-05-20

  FEATURES

   * New cache database based on TDB (http://tdb.samba.org/). This is 
     significantly faster than the previous SQLite backend. The TDB 
     backend will automatically be used if TDB is available; if not, 
     the old SQLite database will be used.

     TDB allows multiple writers to the database. (#185200)

   * The version-info command now prints 'svn revno' and 'svn uuid' 
     when used in Subversion checkouts.

   * The info command now prints the repository UUID and last committed 
     revision number when used on Subversion repositories. (#320271)

   * Now registers a fallback credentials store, allowing 
     Subversion credentials to be used for non-Subversion 
     access. This is useful accessing http(s) URLs will 
     always attempt to open using the native Bazaar formats 
     first.

   * Better error when pushing to a (diverged) empty branch. Unfortunately
     "bzr push" masks this better error at the moment. (#354929)
